Archive2/fe/1c84ad0f75ed37/output
main.cpp:1:16: error: '::main' must return 'int'
     void main ()
                ^
main.cpp: In function 'int main()':
main.cpp:5:5: error: expected initializer before 'printf'
     printf("Digite o slb ");
     ^
main.cpp:6:20: error: 'scanf' was not declared in this scope
     scanf("%f",&slb);
                    ^
main.cpp:8:32: error: 'printf' was not declared in this scope
     printf("Digite o desconto ");
                                ^
main.cpp:11:5: error: 'sll' was not declared in this scope
     sll = slb * (desconto)/100
     ^
